--- a/otheractivities.html
+++ b/otheractivities.html
@@ -123,18 +123,9 @@
              </div>
              <div class="col-md-6 ">
                 <div class="titlepage">
-                   <p class="margin_0">The public pool is located just across the Namorana river from the football/soccer field, no more than a 20-minute walk from any hotel in town. Admission is 5 000 MGA for international visitors and 1 000 MGA for Malagasy visitors. Everyone is required to wear a swim cap, which are available to purchase at the entrance for 1 000 - 3 000, but otherwise all levels of modesty are welcome (bikinis, speedos, one pieces – anything goes). The cost of admission covers your swim in the pool for the day, thermal showers to rinse off after, changing rooms, and a bathroom - but be sure to bring your own towel! Construction is underway (as of 2023) to create a small restaurant on the lawn adjacent to pool grounds, as the grassy riverside stretch is a popular place for picnics, parties, and relaxation after a splash. Please note, drinking and eating in the immediate pool area is not allowed and neither are animals. While you swim your bags are stored in open shelving within eyesight of the pool and while crime is minimal in Ranomafana, on busy days be aware of where your belongings are and consider leaving valuables in your hotel. The pool is open 6:00am-5:00pm and 7:00pm-9:00pm daily, except for Wednesday when it is closed all day for a drain and deep cleaning.</p>
-                </div>
+                  <p class="margin_0">If the public pool is not to your taste, there are several private options that may appeal instead. At the same ticket booth for the public pool, you will find the option for private baths. This entails a private room with a tiled bathtub connected to a thermal water spigot and a cold water spigot. Your purchase of a ticket (again 5 000 MGA for international visitors and 1 000 MGA for Malagasy visitors) will grant you access to one bath room for one hour. Multiple people are welcome in one room at once so long as they each purchase their own ticket. When considering this bathing option, please note you will be expected to bring your own towels and any soap you want to use as nothing is provided aside from hot and cold water. After your hour is up, the hot tub and room get thoroughly cleaned before the next visitor. The private baths have a room reserved for massages that can be booked at the ticket counter. Prices vary on type of massage and length. The baths are open 6:00am-5:00pm daily, and are closed Wednesday for deep cleaning.
+                  </div>
              </div>
-             <div class="col-md-12">
-                <br>
-                             </div>
-                             <div class="col-md-12">
-                              <div class="titlepage">
-                                 <p class="margin_0">If the public pool is not to your taste, there are several private options that may appeal instead. At the same ticket booth for the public pool, you will find the option for private baths. This entails a private room with a tiled bathtub connected to a thermal water spigot and a cold water spigot. Your purchase of a ticket (again 5 000 MGA for international visitors and 1 000 MGA for Malagasy visitors) will grant you access to one bath room for one hour. Multiple people are welcome in one room at once so long as they each purchase their own ticket. When considering this bathing option, please note you will be expected to bring your own towels and any soap you want to use as nothing is provided aside from hot and cold water. After your hour is up, the hot tub and room get thoroughly cleaned before the next visitor. The private baths have a room reserved for massages that can be booked at the ticket counter. Prices vary on type of massage and length. The baths are open 6:00am-5:00pm daily, and are closed Wednesday for deep cleaning.
-                                 </p>
-                              </div>
-                           </div>
              <div class="col-md-12">
                 <div class="titlepage">
                    <p class="margin_0">Finally, if you’re looking for perhaps a more familiar hot-tub like experience, complete with poolside food and beverage service, your best thermal option in Ranomafana is the private pools at Hotel Thermal. These three small thermal pools seat up to 8 people each and need to be booked in advance with the hotel front desk. Prices are 20k per person for several hours. The hotel provides changing rooms, bathrooms, cold showers, and towels. You are able to book the hot spring pools for any time, including late into the evening/night. You are also able to order alcoholic and non alcoholic beverages to be enjoyed in the pool. </p>
@@ -205,12 +196,12 @@
              <br>
 
              <div class="row align-items-center" id="waterfall">
-             <div class="col-md-7">
+             <div class="col-md-5">
                    <div class="about_img text-center ">
-                      <figure><img src="images/water.webp" class="img-fluid" alt="#"/></figure>
+                      <figure><img src="images/water.webp" width="70%" class="img-fluid" alt="#"/></figure>
                    </div>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-7">
                    <div class="titlepage">
                      <h2>Waterfall Hikes</h2>
                       <p class="margin_0">If you've done the national park and are now looking for a smaller hike close to town, fear not! The area around Ranomafana holds plenty of lovely trails to stroll on. One popular option for locals is a short hike to the biggest waterfall the Namorana river boasts. This waterfall is not visible from the road and is located about an hour walk up the river from town. You start your journey at the public swimming pool (piscine) and from there continue on the main path past the pool up the river. This hike takes you through a small town, along thin dirt paths, and through some rice paddies – don't worry, you're on the right track! You should be able to see the large waterfall in the distance about halfway into the hike. If at any point you feel you are going the wrong direction, asking a passerby for directions to the “cascade” will be sure to set you straight. </p>
