--- a/hotels.html
+++ b/hotels.html
@@ -1173,7 +1173,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <p  class="margin_0">12. Karibou Hotel</p>
+                     <p  class="margin_0">12. Karibotel</p>
                   </div>
                </div>
             </div>
