--- a/educational.html
+++ b/educational.html
@@ -86,9 +86,8 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="title">
-                     <h3 style="color: white;">Conservation</h6>
+                     <h2>Conservation</h2>
                         <h6 style="color: white;">how your ecotourism supports biodiversity conservation efforts in Ranomafana</h6>
-
                   </div>
                </div>
             </div>
