--- a/hotels.html
+++ b/hotels.html
@@ -110,7 +110,7 @@
                         <ul style="text-align: left;">
                            <li><strong><u>Contact :</u></strong>
                               <ul>
-                                 <li>Phone : +261 34 07 324 33 (Whatsapp)</li>
+                                 <li>Phone : +261 34 07 324 33</li>
                                  <li>Email :<a href="mailto:setamlodgeresa@gmail.com"> setamlodgeresa@gmail.com</a></li>
                               </ul>
                            </li>
@@ -635,7 +635,7 @@
                               <ul>
                                  <li>18 person conference room for hire 70.000 MGA per day </li>
                                  <li>Coffee machine </li>
-                                 <li>Very Catholic </li>
+                                 <li>Part of the Catholic diocese </li>
                               </ul>
                            </li>
                         </ul>
@@ -992,7 +992,7 @@
                         <ul style="text-align: left;">
                            <li><strong><u>Contact :</u></strong>
                               <ul>
-                                 <li>Phone : +261 34 41 846 32 (Whatsapp) ; +261 32 03 611 19 (Whatsapp)   </li>
+                                 <li>Phone : +261 34 41 846 32; +261 32 03 611 19  </li>
                                  <li>Email :<a href="mailto:audomnaturr@gmail.com"> audomnaturr@gmail.com</a></li>
                               </ul>
                            </li>
