--- a/parkinformation.html
+++ b/parkinformation.html
@@ -86,8 +86,16 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="title">
-                     <h2>Information on the National Park</h2>
-                     <h6 style="color: white;">price of ticket, guide fees, how to get a guide (specialists and what that means), night/day hikes available, tips, what the trail is like, plants and animals to look out for</h6>
+                     <h2>Ranomafana National Park </h2>
+                     <h6 style="color: white;">
+                        <a href="parkinformation.html#ticket" style="color: white;"><span>Ticket prices</span></a>,
+                        <a href="parkinformation.html#guide" style="color: white;"><span>Guide fees</span></a>, 
+                        <a href="parkinformation.html#getguide" style="color: white;"><span>How to get a guide</span></a>, 
+                        <a href="parkinformation.html#specialistguide" style="color: white;"><span>Specialist guides</span></a>, 
+                        <a href="parkinformation.html#daynighthike" style="color: white;"><span>Day/night hikes available</span></a>,
+                        <a href="parkinformation.html#trail" style="color: white;"><span>Trail quality</span></a>,
+                        <a href="parkinformation.html#plantanimal" style="color: white;"><span>Plant and animals to look out for</span></a>
+                     </h6>
                   </div>
                </div>
             </div>
@@ -141,14 +149,14 @@
                <div class="col-md-12">
                   <div class="titlepage">
                      <p class="margin_0">Overall pricing depends largely on the circuit and guide chosen, and what you're hoping to get out of Ranomafana National Park. Each visitor must purchase a ticket to enter, and pay for the guide fees of the local guide who will show you around the forest.</p>
-                     <p class="margin_0"><b><u>Tickets are priced as such:</u></b></p>
+                     <p class="margin_0" id="ticket"><b><u>Tickets are priced as such:</u></b></p>
                         <ul style="text-align: left;">
                            <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<u>Adult (12+):</u> Tourist 55 000 MGA / Malagasy 2 000 MGA</li>
                            <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<u>Kids (5-12):</u> Tourist 25 000 MGA / Malagasy 500 MGA</li>
                            <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<u>Kids (0-5):</u> free</li>
                         </ul>
                         <br><br>
-                        <p class="margin_0"><b>Groups of 1-4 people should expect to take one guide, and groups 6+ people should take at least two guides. <br><u>Guide pricing is based on circuits and their length as follows:</u></b></p>
+                        <p class="margin_0" id="guide"><b>Groups of 1-4 people should expect to take one guide, and groups 6+ people should take at least two guides. <br><u>Guide pricing is based on circuits and their length as follows:</u></b></p>
                         <ul style="text-align: left;">
                            <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<u>Talatakely (Aureus) :</u> 90 000 MGA (2-4h)</li>
                            <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<u>Vatoharanana :</u> 120 000 MGA (3-4h)</li>
@@ -158,7 +166,7 @@
                         </ul>
 
                         <br><br>
-                        <p class="margin_0"><b>Specialist guides can also be requested. These are experts in finding and describing birds, plants, and amphibians/reptiles.  <br><u>Because of their expertise, they are priced (regardless of circuit) accordingly:  </u></b></p>
+                        <p class="margin_0" id="specialistguide"><b>Specialist guides can also be requested. These are experts in finding and describing birds, plants, and amphibians/reptiles.  <br><u>Because of their expertise, they are priced (regardless of circuit) accordingly:  </u></b></p>
                         <ul style="text-align: left;">
                            <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<u>Birds :</u> 220 000 MGA</li>
                            <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<u>Plants :</u> 220 000 MGA</li>
@@ -166,10 +174,10 @@
 
                         </ul>
                         <br>
-                        <p class="margin_0">Guides can be arranged through your hotel, or you can arrive at the park and choose from the guides available that day for tours. The park is open from 7:00 am to 5:00 pm, and the best time to head in is generally the mid-morning, as lemurs are awake and settling in for breakfast.</p>
+                        <p class="margin_0" id="getguide">Guides can be arranged through your hotel, or you can arrive at the park and choose from the guides available that day for tours. The park is open from 7:00 am to 5:00 pm, and the best time to head in is generally the mid-morning, as lemurs are awake and settling in for breakfast.</p>
                         <p class="margin_0">To get to the park, pick up a taxi brousse heading towards Fianarantsoa from the station in the center of town and let them know you are getting off at the park entrance; it will take about 20-25 minutes on the road, and cost you 1-2,000 MGA per person. If you have a car, simply head up the road 7km from the center of town! Getting back to your hotel is the same, but in reverse. You might also want to try walking down to town, weather permitting, as it is a beautiful 1 hour downhill journey (and lemurs have been known to hang out near the road)!</p>
-                        <p class="margin_0">Here is a comprehensive list of lemurs found in Ranomafana National Park: Golden bamboo lemur, Greater bamboo lemur, Ranomafana grey bamboo lemur, Milne-Edwards sifaka, Southern black and white ruffed lemur, Red-bellied lemur, Red-fronted brown lemur, Aye-aye, Brown mouse lemur, Crossley’s dwarf lemur, Small-toothed sportive lemur, Sibree’s darf lemur, and Peyrieras’s woolly lemur.</p>
-                        <p class="margin_0">Night hikes can be arranged through your daytime park guide or through your hotel. They take place along the National Road 25, as the park itself is closed from 5:00 pm onward. You can expect to see Brown mouse lemurs and many kinds of chameleons on the walk, which takes around 1 hour. You do need a private car to go on a night hike, as brousses stop running regularly after dusk and it is generally not considered safe to walk down the road at night. </p>
+                        <p class="margin_0" id="plantanimal">Here is a comprehensive list of lemurs found in Ranomafana National Park: Golden bamboo lemur, Greater bamboo lemur, Ranomafana grey bamboo lemur, Milne-Edwards sifaka, Southern black and white ruffed lemur, Red-bellied lemur, Red-fronted brown lemur, Aye-aye, Brown mouse lemur, Crossley’s dwarf lemur, Small-toothed sportive lemur, Sibree’s darf lemur, and Peyrieras’s woolly lemur.</p>
+                        <p class="margin_0" id="daynighthike">Night hikes can be arranged through your daytime park guide or through your hotel. They take place along the National Road 25, as the park itself is closed from 5:00 pm onward. You can expect to see Brown mouse lemurs and many kinds of chameleons on the walk, which takes around 1 hour. You do need a private car to go on a night hike, as brousses stop running regularly after dusk and it is generally not considered safe to walk down the road at night. </p>
 
                     </div>
                </div>
