--- a/index.html
+++ b/index.html
@@ -92,29 +92,29 @@
       </div>
       <div class="about">
          <div class="container">
-            <div class="row">
+            <div class="row align-items-center">
                <div class="col-md-5">
                   <div class="titlepage">
                      <h2>Welcome to Ranomafana! </h2>
-                     <p>
-                        It is our goal to attract tourists to this tropical paradise who prefer to travel independently, design their own vacation, and immerse themselves fully in culture. It is also our goal to help you make the absolute most of your visit to Ranomafana once you do arrive!</p>
-                  </div>
+                     <p>This website was designed in collaboration with the United States Peace Corps and Madagascar National Parks and with you in mind.
+                        It is our goal to attract tourists to this tropical paradise who prefer to travel independently, design their own vacation, and immerse themselves fully in culture. It is also our goal to help you make the absolute most of your visit to Ranomafana once you do arrive!
+<br><br>                On this website you will find several tabs of information to make booking your trip to Ranomafana easy and simple. The first tab includes everything you might need to know about hotels in town – including prices, amenities, and contact information. If you're worried about an international phone call, check to see if the contact is available on WhatsApp! Don't forget to see where the hotel is on the map.</p>
+                     </div>
                </div>
                <div class="col-md-7">
                   <div class="about_img">
                      <img src="images/PARC.jpg" class="img-fluid" alt="#"/>
                   </div>
                </div>
-            </div>
-            <div class="row">
-               <div class="col-md-12">
+               <div class="col-md-12 mt-0">
                   <div class="titlepage">
-                     <br>
-                     <p>
-                        On this website you will find several tabs of information to make booking your trip to Ranomafana easy and simple. The first tab includes everything you might need to know about hotels in town – including prices, amenities, and contact information. If you're worried about an international phone call, check to see if the contact is available on WhatsApp! Don't forget to see where the hotel is on the map. The next tab includes information on Ranomafana National Park, the town’s main tourist attraction. This tab will help set up all the hikes you hope to do, as it provides guidance on buying tickets, arranging guides, and what kinds of circuits are available. You'll also find a tab here on information about other activities that you can (and should!) participate in around town. This includes waterfall hikes, hot springs, kayaking, and more – be sure to check it out. Next you'll see important information on how exactly to get to town from Antananarivo via multiple forms of transportation. This can be tricky, but fear not, this will have all the information you may need. This website will also give you some educational context and information on how your ecotourism supports biodiversity conservation efforts in Ranomafana. And finally, you can find contact information should you have any questions, and a map of Ranomafana town itself                     </p>
+                     <p class="no-margin">
+                        The next tab includes information on Ranomafana National Park, the town’s main tourist attraction. This tab will help set up all the hikes you hope to do, as it provides guidance on buying tickets, arranging guides, and what kinds of circuits are available. You'll also find a tab here on information about other activities that you can (and should!) participate in around town. This includes waterfall hikes, hot springs, kayaking, and more – be sure to check it out. Next you'll see important information on how exactly to get to town from Antananarivo via multiple forms of transportation. This can be tricky, but fear not, this will have all the information you may need. This website will also give you some educational context and information on how your ecotourism supports biodiversity conservation efforts in Ranomafana. And finally, you can find contact information should you have any questions, and a map of Ranomafana town itself.”
+                     </p>
                   </div>
                </div>
             </div>
+
          </div>
       </div>
       <!-- end about -->
