update photo park

--- a/educational.html
+++ b/educational.html
@@ -96,12 +96,52 @@
       <!-- about -->
       <div class="about">
          <div class="container-fluid">
-            <div class="row">
+            <div class="row "row align-items-center">
+               <div class="row align-items-center" id="hot-springs">
+                  <div class="col-md-9">
+                      <div class="titlepage">
+                        <p class="margin_0">If you find yourself on the fence of visiting Ranomafana, this section is for you. The rainforest, lemurs, and hot springs all work together to draw in international and national tourists to the town, which benefits the 20,000 residents of Ranomafana and the natural landscape more than you might guess. 
+                           <br><br>Ecotourism provides essential revenue that directly funds conservation efforts in Ranomafana. Income from entrance fees, guided tours, and other park-related activities is often reinvested in maintaining the park, protecting its wildlife, and supporting critical biodiversity research. Since 1991, Madagascar National Parks (MNP) has managed Ranomafana National Park and the endemic flora and fauna within it. MNP is a private association recognized for its public interest, operating under the supervision of the Ministry of Environment and Sustainable Development in Madagascar. MNP’s mission is to establish, conserve, and sustainably manage a network of national parks and reserves that represent Madagascar’s biological diversity and natural heritage. A key part of this mission is conserving protected areas while involving local communities in various conservation activities. 
+</p>
+                        </div>
+                   </div>
+
+                   <div class="col-md-3">
+                     <!-- Carousel with Indicators -->
+                     <div id="carouselpARCIndicators" class="carousel slide" data-bs-ride="carousel">
+                        <!-- Indicators (points) -->
+                        <div class="carousel-indicators">
+                              <button type="button" data-bs-target="#carouselpARCIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                              <button type="button" data-bs-target="#carouselpARCIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                              <button type="button" data-bs-target="#carouselpARCIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        </div>
+                        <!-- Carousel Items -->
+                        <div class="carousel-inner about_img">
+                              <div class="carousel-item active">
+                                 <img src="images/parc2.webp" class="d-block w-100" alt="Lemur Image 1">
+                              </div>
+                              <div class="carousel-item">
+                                 <img src="images/parc3.webp" class="d-block w-100" alt="Lemur Image 2">
+                              </div>
+                              <div class="carousel-item">
+                                 <img src="images/parc9.webp" class="d-block w-100" alt="Lemur Image3">
+                              </div>
+                        </div>
+                        <!-- Arrows to navigate the carousel -->
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselpARCIndicators" data-bs-slide="prev">
+                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselpARCIndicators" data-bs-slide="next">
+                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Next</span>
+                        </button>
+                     </div>
+                  </div>
+
                 <div class="col-md-12">
                     <div class="titlepage">
-                       <p class="margin_0">If you find yourself on the fence of visiting Ranomafana, this section is for you. The rainforest, lemurs, and hot springs all work together to draw in international and national tourists to the town, which benefits the 20,000 residents of Ranomafana and the natural landscape more than you might guess. 
-                        <br><br>Ecotourism provides essential revenue that directly funds conservation efforts in Ranomafana. Income from entrance fees, guided tours, and other park-related activities is often reinvested in maintaining the park, protecting its wildlife, and supporting critical biodiversity research. Since 1991, Madagascar National Parks (MNP) has managed Ranomafana National Park and the endemic flora and fauna within it. MNP is a private association recognized for its public interest, operating under the supervision of the Ministry of Environment and Sustainable Development in Madagascar. MNP’s mission is to establish, conserve, and sustainably manage a network of national parks and reserves that represent Madagascar’s biological diversity and natural heritage. A key part of this mission is conserving protected areas while involving local communities in various conservation activities. To achieve this, MNP:
-                        <br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa fa-minus">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i>Deploys park rangers to patrol the area, ensuring the protection of natural resources and conducting ecological monitoring to assess the health of the park’s biodiversity.
+                       <p class="margin_0">To achieve this, MNP:<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa fa-minus">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i>Deploys park rangers to patrol the area, ensuring the protection of natural resources and conducting ecological monitoring to assess the health of the park’s biodiversity.
                         <br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa fa-minus">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i>Oversees the installation and upkeep of conservation infrastructure, such as boundary markers, firebreaks, and watchtowers.
                         <br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa fa-minus">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i>Promotes public awareness about the importance of preserving the park’s biodiversity.
                         <br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa fa-minus">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i>Collaborates with local communities, engaging them in conservation efforts as guides, escorts, porters, cooks, and laborers.
