--- a/parkinformation.html
+++ b/parkinformation.html
@@ -126,9 +126,8 @@
                   </div>
                   <div class="col-md-9 ">
                      <div class="titlepage">
-                        <p class="margin_0">The park’s main circuit is the Talatakely (or Aureus) trail. When choosing this path, one can reasonably expect a 2-4 hour hike walking on a mix of clearly delineated paths and much more ambiguous cuts through the brush of secondary forest. This path takes you into bamboo forests, home of some Golden and Greater bamboo lemur groups, and up to the lookout, where Red-bellied and Red-fronted lemurs enjoy hanging out. Other paths in Talatakely can take you to a waterfall called Sakaroa, where on a hot day one might enjoy a dip. Generally, this circuit is considered easy to moderately challenging with some steep climbs and descents. </p>
+                        <p class="margin_0" id="trail">The park’s main circuit is the Talatakely (or Aureus) trail. When choosing this path, one can reasonably expect a 2-4 hour hike walking on a mix of clearly delineated paths and much more ambiguous cuts through the brush of secondary forest. This path takes you into bamboo forests, home of some Golden and Greater bamboo lemur groups, and up to the lookout, where Red-bellied and Red-fronted lemurs enjoy hanging out. Other paths in Talatakely can take you to a waterfall called Sakaroa, where on a hot day one might enjoy a dip. Generally, this circuit is considered easy to moderately challenging with some steep climbs and descents. </p>
                   </div>
-               </div>
                </div>
                <br>
                <div class="row align-items-center">
@@ -142,8 +141,6 @@
                         <figure><img src="images/parc8.webp" class="img-fluid" alt="#"/></figure>
                      </div>
                   </div>
-
-               </div>
                </div>
                <br>
                <div class="col-md-12">
