--- a/hotels.html
+++ b/hotels.html
@@ -99,7 +99,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <p  class="margin_0">1. Setam Lodge </p>
+                     <p  class="margin_0">1. SETAM Lodge </p>
                   </div>
                </div>
             </div>
@@ -141,8 +141,8 @@
                            <br>
                            <li><strong><u>Link :</u></strong>
                               <ul>
-                                 <li><a href="https://web.facebook.com/setamgroup" target="_blank">Setam Groupe (Facebook)</a></li>
-                                 <li><a href="https://web.facebook.com/setam.lodge" target="_blank">Setam Lodge Madagascar (Facebook)</a></li>
+                                 <li><a href="https://web.facebook.com/setamgroup" target="_blank">SETAM Groupe (Facebook)</a></li>
+                                 <li><a href="https://web.facebook.com/setam.lodge" target="_blank">SETAM Lodge Madagascar (Facebook)</a></li>
                               </ul>
                            </li>
                            <br>
