--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <figure><img src="images/hotels/setam1.webp" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
-                        <h3>Setam Lodge</h3>
+                        <h3>SETAM Lodge</h3>
                         <a class="read_more" href="hotels.html#setam-lodge"> More</a>
                      </div>
                   </div>
