--- a/educational.html
+++ b/educational.html
@@ -102,7 +102,7 @@
                       <div class="titlepage">
                         <p class="margin_0">If you find yourself on the fence of visiting Ranomafana, this section is for you. The rainforest, lemurs, and hot springs all work together to draw in international and national tourists to the town, which benefits the 20,000 residents of Ranomafana and the natural landscape more than you might guess. 
                            <br><br>Ecotourism provides essential revenue that directly funds conservation efforts in Ranomafana. Income from entrance fees, guided tours, and other park-related activities is often reinvested in maintaining the park, protecting its wildlife, and supporting critical biodiversity research. Since 1991, Madagascar National Parks (MNP) has managed Ranomafana National Park and the endemic flora and fauna within it. MNP is a private association recognized for its public interest, operating under the supervision of the Ministry of Environment and Sustainable Development in Madagascar. MNP’s mission is to establish, conserve, and sustainably manage a network of national parks and reserves that represent Madagascar’s biological diversity and natural heritage. A key part of this mission is conserving protected areas while involving local communities in various conservation activities. 
-</p>
+                        </p>
                         </div>
                    </div>
 
@@ -114,17 +114,29 @@
                               <button type="button" data-bs-target="#carouselpARCIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                               <button type="button" data-bs-target="#carouselpARCIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
                               <button type="button" data-bs-target="#carouselpARCIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                              <button type="button" data-bs-target="#carouselpARCIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                              <button type="button" data-bs-target="#carouselpARCIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                              <button type="button" data-bs-target="#carouselpARCIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
                         </div>
                         <!-- Carousel Items -->
                         <div class="carousel-inner about_img">
                               <div class="carousel-item active">
-                                 <img src="images/parc2.webp" class="d-block w-100" alt="Lemur Image 1">
+                                 <img src="images/parc2.webp" class="d-block img-carousel" alt="Lemur Image 1">
                               </div>
                               <div class="carousel-item">
-                                 <img src="images/parc3.webp" class="d-block w-100" alt="Lemur Image 2">
+                                 <img src="images/parc3.webp" class="d-block img-carousel" alt="Lemur Image 2">
                               </div>
                               <div class="carousel-item">
-                                 <img src="images/parc9.webp" class="d-block w-100" alt="Lemur Image3">
+                                 <img src="images/parc9.webp" class="d-block img-carousel" alt="Lemur Image3">
+                              </div>
+                              <div class="carousel-item">
+                                 <img src="images/parc6.webp" class="d-block img-carousel" alt="Lemur Image4">
+                              </div>
+                              <div class="carousel-item">
+                                 <img src="images/parc4.webp" class="d-block img-carousel" alt="Lemur Image5">
+                              </div>
+                              <div class="carousel-item">
+                                 <img src="images/parc5.webp" class="d-block img-carousel" alt="Lemur Image6">
                               </div>
                         </div>
                         <!-- Arrows to navigate the carousel -->
